<resources>
    <string name="app_name">test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="send_code">Send Code</string>
    <string name="recover_your_account">Recover your account</string>
    <string name="enter_email">Enter Email</string>
    <string name="recover_your_account1">Recover your Account</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login1">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign UP</string>
    <string name="create_an_account1">Create an account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="sign_inT" />
</resources>